objects/Multi_channel_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Multi channel Settings desc</description>
    <fields>
        <fullName>One_Docs__c</fullName>
        <label>One Docs</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_To__c</fullName>
        <label>Send To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>contact_number__c</fullName>
        <label>contact number</label>
        <type>Phone</type>
    </fields>
    <label>Multi channel Settings</label>
</CustomObject>